2000-06-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* boolean.h (SCM_TRUE_P):  Removed, as people might use it as a
	replacement for !SCM_FALSEP.

	* backtrace.c (display_error_body), boolean.h (SCM_BOOLP), gc.c
	(scm_unhash_name), gh_data.c (gh_module_lookup), load.c
	(scm_primitive_load), print.c (scm_simple_format), procs.c
	(scm_procedure_documentation), procs.h (SCM_TOP_LEVEL), ramap.c
	(scm_array_fill_int), scmsigs.c (scm_sigaction), stacks.c
	(narrow_stack, scm_make_stack, scm_stack_id), symbols.c
	(scm_string_to_obarray_symbol), throw.c (scm_catch,
	scm_lazy_catch, scm_ithrow), unif.c (scm_make_uve, scm_array_p,
	scm_array_set_x, scm_bit_set_star_x, scm_bit_count_star),
	validate.h (SCM_VALIDATE_BOOL_COPY, SCM_VALIDATE_PROC):  Replace
	uses of SCM_TRUE_P (x) with SCM_EQ_P (x, SCM_BOOL_T).

2000-06-04  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* eval.c (scm_badformalsp): New static function.
	(SCM_CEVAL): Check arguments for procedure-with-setter closures.
	(Thanks to Keisuke Nishida.)

	The major reason for Guile's slow loading speed has been the fact
	that a chain of Scheme level procedures has been evaluated for
	every top-level symbol lookup during the first pass through the
	code.
	
	The following is a kludge which I suggested four years ago, and
	which I've repeatedly suggested since.  Personally, I've never
	been bothered by Guile's slow loading speed, so I thought I would
	let someone else do it...

	But since the new environments will be included first in
	Guile-1.5, I thought it would make people happy to get the kludge
	into 1.4.
	
	* modules.c: Added #include "libguile/vectors.h";
	Added #include "libguile/hashtab.h";
	Added #include "libguile/struct.h";
	Added #include "libguile/variable.h";
	Capture Scheme level `module-make-local-var!' to be used in the
	standard eval closure.
	(scm_standard_eval_closure): New primitive.

	* modules.h (scm_standard_eval_closure): Declare.

	* eval.c (scm_lookupcar): Test for !SCM_CONSP (SCM_CAR (env))