@@ -1,5 +1,14 @@
 2000-06-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
+	* gc.h (SCM_CARLOC, SCM_CDRLOC):  Don't take the address of a SCM
+	value.
+
+	* sort.c (scm_sorted_p, scm_merge, scm_merge_list_x,
+	scm_merge_list_step):  Don't take the address of SCM_CAR.  Use
+	SCM_CARLOC instead.  Thanks to Bernard Urban for the bug report.
+
+2000-06-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
 	* boolean.h (SCM_TRUE_P):  Removed, as people might use it as a
 	replacement for !SCM_FALSEP.
 
